[package]
name = "identity"
version = "0.1.0"
description = "A simple Solana program to discover Anchor :)"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
identity_macros = { path = "../../macros/identity_macros" }